# ie-cli

./: .classpath  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  TODO_PRIORITIES.md
.claude/: settings.json  settings.local.json
.claude/skills/: diagnose-dialog.md
.claude/skills/explore-dungeon/: SKILL.md  describe_rooms.py  walk_graph.py
.claude/skills/map-stat-gates/: SKILL.md  gate_histogram.py  gate_payoffs.py
.claude/skills/mod-diff/: SKILL.md  mod_diff.py
.claude/skills/plan-stat-build/: SKILL.md  stat_economy.py
.claude/skills/trace-quest-timer/: SKILL.md  trace_timer.py
.github/workflows/: ant.yml  ci.yml  deploy.yml  release.yml
crates/ie-cli/: Cargo.toml
crates/ie-cli/src/: main.rs
crates/ie-cli/tests/: dump.rs  dump_raw.rs  list.rs  save.rs  tlk_append.rs
crates/ie-core/: Cargo.toml
crates/ie-formats/: Cargo.toml
crates/ie-io/: Cargo.toml
docs/: BCS_DECODING_BUGS.md  BCS_DECODING_PLAN.md  BUG_pst_opcode_table.md  DLG_GRAPH_AND_OVERRIDE_DIFF.md  NEAR_INFINITY_REFERENCE.md  PARSER_COVERAGE.md  PROPOSED_DLG_GRAPH_AND_OVERRIDE_DIFF.md  PST_STAT_PLAN.md  REGRESSION_PLAN.md  SAVE_SUPPORT_TODO.md  SKILLS.md  SPEC_SAVE_ITEM_WRITE.md  SPEC_SAVE_ITEM_WRITE_COMPLETE.md  scheduled-agent-prompt.md
docs/decisions/: 2026-04-24-are-read-link-enrichment.md  2026-04-26-iecli-verify-plan.md  2026-07-04-save-item-write-complete-gate.md  2026-07-04-save-item-write.md
docs/guides/: PST_CONVERSATION_BOONS.md  PST_LAW_LEDGER.md  PST_STAT_PLAN.md  PST_STAT_PLAN_MOD_DELTA.md
src/: nearinfinity.properties
(+193 files in other folders)
