[workspace]
members = [
    "crates/ie-core",
    "crates/ie-io",
    "crates/ie-formats",
    "crates/ie-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "LGPL-2.1-or-later"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5.39", features = ["derive"] }
flate2 = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.12"
